fix:style-changed card text align to normal

--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -16,7 +16,6 @@
     width: 40%;
     font-family: 'Poppins', sans-serif;
     color: white;
-    text-align: center;
     background-color: rgba(255, 255, 255, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 16px;
